logos nuevos, traducciones y link al portal anterior

--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -25,9 +25,9 @@ public.chart.radio.el=Capa medio ambiental
 public.datasets.title=Conjuntos de datos
 public.datasets.header.title=conjuntos de datos
 public.datasets.header.message01=La mayor parte del contenido en
-public.datasets.header.message02=como los registros, los datos ambientales y el estado de conservaci\u00f3n de especies, viene de los conjuntos de datos proporcionandos por la colecta de las instituciones, los colectores individuales  y los grupos comunitarios. Estos conjuntos de datos aparecen en esta p\u00e1gina
-public.datasets.header.message03=Refinar la lista de juegos de datos haciendo clic en uno de los filtros de la lista de la izquierda. Haga clic en
-public.datasets.header.message04=cambiar para ver una descripci\u00f3n del conjunto de datos. Para averiguar m\u00e1s, ir a la p\u00e1gina de metadatos del conjunto de datos haciendo clic en su nombre
+public.datasets.header.message02=como los registros, los datos ambientales y el estado de conservaci\u00f3n de especies, proviene de los recursos proporcionados por la colecta de las instituciones, los colectores individuales y los grupos comunitarios. Dichos recursos aparecen listados en esta p&aacute;gina.
+public.datasets.header.message03=Usted puede filtrar la lista de recursos haciendo clic en uno de los filtros de la lista de la izquierda. Haga clic en este icono
+public.datasets.header.message04=para ver la descripci&oacute;n de uno de los recursos. Si quiere consultar m&aacute;s informaci&oacute;n, puede ir a la p&aacute;gina de metadatos del recurso haciendo clic en su nombre.
 public.datasets.noscript.message01=No tiene javascript activado. Esta p\u00e1gina no funciona sin javascript
 public.datasets.sidebar.header=Refinar los resultados
 public.datasets.resultsreturned.message01=Mostrar
@@ -43,12 +43,12 @@ public.datasets.loading=Cargando
 public.listinstitutions.title=p\u00e1gina simple GSP
 
 public.map.title01=Colecciones de Historia Natural
-public.map.title02=Atlas of Living Australia
+public.map.title02=Portal de Datos del SNDB
 public.map.breadcrumb.home=Inicio
 public.map.breadcrumb.explore=Explorar
 public.map.breadcrumb.des=Colecciones de Historia Natural
 public.map.header.title=Colecciones de historia natural de Argentina
-public.map.header.des=Aprende sobre las instituciones, las colecciones que mantienen y vea los registros de los espec\u00edmenes que han sido almacenados. Actualmente s\u00f3lo las colecciones de los socios de ALA son mostradas. Con el tiempo esta lista se ampliar\u00e1 para incluir todas las colecciones de historia natural en Australia
+public.map.header.des=Aprende sobre las instituciones, las colecciones que mantienen y vea los registros de los espec\u00edmenes que han sido almacenados. Actualmente s\u00f3lo las colecciones de los centros adheridos al SNDB son mostradas. Con el tiempo esta lista se ampliar\u00e1 para incluir todas las colecciones de historia natural en Australia
 public.map.label01=Mostrar estas colecciones
 public.map.selectall=Seleccionar todo
 public.map.herbaria=Herbarios
@@ -69,7 +69,7 @@ public.map3.link.allcollections=Todas las colecciones
 public.map3.link.showall=Mostrar todo
 public.map3.link.fauna=Fauna
 public.map3.link.mammals=Mam\u00edferos, p\u00e1jaros, reptiles, peces, anf\u00edbios e invertebrados
-public.map3.link.insect=Insectos
+public.map3.link.insect=Artr&oacute;podos
 public.map3.link.insects=Insectos, ara\u00f1as, \u00e1caros y otros artr\u00f3podos
 public.map3.link.mos=Microorganismos
 public.map3.link.protists=Protistas, bacterias, virus, microhongos y microalgas
@@ -97,7 +97,7 @@ public.des=Descripci\u00f3n
 public.location=Localizaci\u00f3n
 public.website=Sitio Web
 public.numbrs.des01=Analizando... el n\u00famero de registros que
-public.numbrs.des02=pueden accederse a trav\u00e9s de Atlas of Living Australia
+public.numbrs.des02=pueden accederse a trav\u00e9s del Portal de Datos del SNDB
 public.numbrs.link=Haga clic para ver los registros de la
 
 public.show.header.acronym=Acr\u00f3nimo
@@ -133,9 +133,9 @@ public.show.rt.des01=La colecci\u00f3n tiene una base de datos
 public.show.rt.des02=de estos
 public.show.rt.des03=registros
 public.show.rt.des04=Analizando... el n\u00famero de registros que
-public.show.rt.des05=se puede acceder a trav\u00e9s de Atlas of Living Australia
+public.show.rt.des05=se puede acceder a trav\u00e9s del Portal de Datos del SNDB
 public.show.rt.des06=Haga clic para ver todos los registros de la
-public.show.rt.des07=No hay registros para esta colecci\u00f3n que pueden accederse a trav\u00e9s del Atlas of Living Australia
+public.show.rt.des07=No hay registros para esta colecci\u00f3n que pueden accederse a trav\u00e9s del Portal de Datos del SNDB 
 public.show.crmc.title=Mapa de registros
 public.show.speedocaption=No hay registros disponibles para su visualizaci\u00f3n en el Atlas
 public.show.it.title=Im\u00e1genes de esta colecci\u00f3n
@@ -165,7 +165,7 @@ public.sdr.content.label08=Moviemiento de datos
 public.sdr.usagestats.labe=Estad\u00edsticas de uso
 public.sdr.content.label09=Registros digitalizados
 public.sdr.content.des04=Analizando...el n\u00famero de registros que
-public.sdr.content.des05=son accesibles a trav\u00e9s del Atlas of Living Australia
+public.sdr.content.des05=son accesibles a trav\u00e9s del Portal de Datos del SNDB
 public.sdr.content.link01=Haga clic para ver los registros de
 public.sdr.content.link02=recurso
 public.sdr.content.label10=Mapa de registros
@@ -319,9 +319,9 @@ reports.harvesters.th.lastchecked=\u00daltima comprobaci\u00f3n
 reports.harvesters.th.datacurrency=Movimiento de Datos
 reports.harvesters.th.collection=Conexi\u00f3n
 
-reports.index.title=Informe de Colecciones de ALA
+reports.index.title=Informe de Colecciones del SNDB
 reports.index.title01=Informe de Colecciones de Historia Natural
-reports.index.des01=Informaci\u00f3n sobre la cantidad, calidad y uso de las colecciones de biodiviersidad de ALA
+reports.index.des01=Informaci\u00f3n sobre la cantidad, calidad y uso de las colecciones de biodiviersidad del SNDB
 reports.index.title02=Por favor inicia tu sesi\u00f3n
 reports.index.link.login=Inicia sesi\u00f3n
 reports.index.des02=Debe iniciar sesi\u00f3n para administrar los registros de la colecci\u00f3n
@@ -336,7 +336,7 @@ reports.index.linktext.data=unas medidas de integridad de metadatos
 reports.index.pagelink.changes=Mostrar cambios
 reports.index.linktext.changes=lista de cambios recientes hechas en el registro de la colecci\u00f3n
 reports.index.pagelink.membership=Ver miembros
-reports.index.linktext.membership=listas de socios de ALA y miembros de las redes de las colecciones (hubs)
+reports.index.linktext.membership=listas de centros adheridos al SNDB y miembros de las redes de las colecciones (hubs)
 reports.index.title05=Colecciones
 reports.index.title06=Instituciones
 reports.index.title07=Proveedores de datos & recursos
@@ -384,7 +384,7 @@ reports.institutions.link.view=Vista
 reports.institutions.link.edit=Editar
 
 reports.membership.title01=Informe de miembros
-reports.membership.tr01=Instituciones asociadas a ALA
+reports.membership.tr01=Instituciones adheridas al SNDB
 reports.membership.tr02=Consejo de jefes de Herbarios Australianos
 reports.membership.tr0302=Consejo de Jefes de Colecciones de Fauna Australiana
 reports.membership.tr0402=Consejo de Jefes de Colecciones Entomol\u00f3gicas Australianas
@@ -453,9 +453,9 @@ reports.show.table0104=Inicios de sesi\u00f3n \u00fanicos de proveedor
 reports.show.table0105=Vistas de curador
 reports.show.table0106=Previsualizaciones de curador
 reports.show.table0107=Ediciones del curador
-reports.show.table0201=Instituciones asociadas a ALA
+reports.show.table0201=Instituciones adheridas al SNDB
 
-rifcs.index.title=Atlas of Living Australia
+rifcs.index.title=Portal de Datos del SNDB
 rifcs.index.title01=Ver esta colecci\u00f3n en la p\u00e1gina web de
 
 providerGroup.imageRef.filename.label=Nota
@@ -468,7 +468,7 @@ providerGroup.logoRef.copyright.label=Copyright
 
 institution.name.label=Nombre
 institution.acronym.label=Acr\u00f3nimo
-institution.isALAPartner.label=Socio de ALA
+institution.isALAPartner.label=Adherido al SNDB
 institution.institutionType.label=Tipo
 
 address.label=Direcci\u00f3n
@@ -491,7 +491,7 @@ dataResource.dataProvider.label=proveedores de datos
 
 institution.dataProvider.label=Instituci\u00f3n
 
-providerGroup.isALAPartner.label=Es socio de ALA
+providerGroup.isALAPartner.label=Esta adherido al SNDB
 providerGroup.networkMembership.label=Pertenece a
 providerGroup.websiteUrl.label=Url del sitio web
 providerGroup.notes.label=Notas
@@ -606,9 +606,9 @@ shared.tr.help.link06=Qui\u00e9n eligi\u00f3 este conjunto de grupos taxon\u00f3
 shared.tr.help.link07=Para qu\u00e9 se usa esta informaci\u00f3n
 shared.tr.help.link08=C\u00f3mo puedo reportar un error
 
-admin.home.title=Gesti\u00f3n de colecciones de ALA
+admin.home.title=Gesti\u00f3n de colecciones del SNDB
 admin.home.li.home=Inicio
-admin.home.li.ala=ala
+admin.home.li.ala=sndb
 admin.home.li.collections=colecciones
 admin.logout=Desconectarse
 admin.login=Iniciar sesi\u00f3n
@@ -651,7 +651,7 @@ admin.notlogin.title=Por favor, inicie sesi\u00f3n
 admin.notlogin.link=Inicie sesi\u00f3n
 admin.notlogin.des=Debe iniciar sesi\u00f3n para administrar los registros de la colecci\u00f3n
 
-admin.index.title=Gesti\u00f3n de colecciones de ALA
+admin.index.title=Gesti\u00f3n de colecciones del SNDB
 admin.index.link01=Ver sitio p\u00fablico
 admin.index.title01=Gesti\u00f3n de colecciones de historia natural
 admin.index.title02=M\u00e1s informaci\u00f3n sobre las colecciones australianas de biodiversidad puede ser agregada y actualizada aqu\u00ed
@@ -683,7 +683,7 @@ admin.index.des15=Ver y editar la asignaci\u00f3n de c\u00f3digos de colecci\u00
 admin.index.link16=Exportar todos los datos como JSON
 admin.index.des16=Todas las tablas exportadas a JSON
 
-admin.sr.title=Gestion de los resultados de b\u00fasqueda de colecciones de ALA
+admin.sr.title=Gestion de los resultados de b\u00fasqueda de colecciones del SNDB
 admin.sr.title01=Resultado de la b\u00fasqueda
 admin.sr.span01=B\u00fasqueda sin resultados
 admin.sr.des01=Haga clic
@@ -1041,7 +1041,7 @@ manage.list.table01.cell0101=Vista
 manage.list.table01.cell0102=Editar
 manage.list.des05=Est\u00e1 autorizado para modificar todas las instituciones porque es administrador
 manage.list.des06=No est\u00e1 autorizado para modificar entidades
-manage.list.des07=Tiene el rol necesario, pero no aparece como contacto con permisos de edici\u00f3n en cualquier colecci\u00f3n, instituci\u00f3n o juego de datos. Si usted cree que deber\u00eda tenerlos, solic\u00edtelo a alguien que est\u00e9 en la lista para agregarte como contacto. Si no puede hacerlo, pulse en el enlace de m\u00e1s abajo para enviar una solicitud al equipo de apoyo ALA
+manage.list.des07=Tiene el rol necesario, pero no aparece como contacto con permisos de edici\u00f3n en cualquier colecci\u00f3n, instituci\u00f3n o juego de datos. Si usted cree que deber\u00eda tenerlos, solic\u00edtelo a alguien que est\u00e9 en la lista para agregarte como contacto. Si no puede hacerlo, pulse en el enlace de m\u00e1s abajo para enviar una solicitud al equipo de apoyo al SNDB
 manage.list.des08=No tiene permisos necesarios para editar metadatos. Usted puede enviar un mail
 manage.list.des09=soporte
 manage.list.des10=solicitar este rol
@@ -1053,7 +1053,7 @@ manage.list.des13=Usted necesita
 manage.list.li04=para iniciar sesi\u00f3n utilizando una cuenta est\u00e1ndar
 manage.list.li05=el rol de 'Editor de colecciones'
 manage.list.li06=para ser listado como un contacto con permisos de editor para la colecci\u00f3n, la instituci\u00f3n o el dataset que desea editar
-manage.list.title06=Usted tiene una cuenta de ALA
+manage.list.title06=Usted tiene una cuenta del SNDB
 manage.list.des14=Est\u00e1 logueado como
 manage.list.title07=Usted tiene el rol de 'Editor de Colecciones'
 manage.list.title08=Usted <strong>no</strong> tiene el rol de 'Editor de colecciones'
@@ -1082,7 +1082,7 @@ manage.list.addcollection.li04=S\u00f3lo puede vincular su colecci\u00f3n a una 
 manage.list.addcollection.li05=Usted se a\u00f1adir\u00e1 autom\u00e1ticamente como contacto y  editor para la nueva colecci\u00f3n
 manage.list.addcollection.li06=Usted necesitar\u00e1 un nombre para la nueva colecci\u00f3n. Entonces se crear\u00e1 y se le dirigir\u00e1 a las p\u00e1ginas de edici\u00f3n de la colecci\u00f3n para proporcianar m\u00e1s informaci\u00f3n
 manage.list.addcollection.li07=La colecci\u00f3n ser\u00e1 p\u00fablica en cuanto la cree
-manage.list.addcollection.li08=S\u00f3lo los administradores de ALA pueden borrar las colecciones. P\u00f3ngase en contacto con los administradores si quiere eliminar una colecci\u00f3n
+manage.list.addcollection.li08=S\u00f3lo los administradores del SNDB pueden borrar las colecciones. P\u00f3ngase en contacto con los administradores si quiere eliminar una colecci\u00f3n
 manage.list.addcollection.link02=Crea una nueva colecci\u00f3n
 manage.list.addtools.title01=Funcionalidades del Administrador
 manage.list.addtools.des01=Eres un administrador de ({0}). Por favor use sabiamente sus permisos
@@ -1119,7 +1119,7 @@ manage.list.addtools.des16=Cargas de recursos descargados de GBIF. (Se asume que
 
 manage.index.title=Gesti\u00f3n de metadatos
 manage.index.link=Ver sitio p\u00fablico
-manage.index.title01=ALA gesti\u00f3n de metadatos
+manage.index.title01=SNDB gesti\u00f3n de metadatos
 manage.index.des01=Aqu\u00ed se pueden festionar los datasets, las instituciones y las colecciones
 manage.index.title02=Por favor inicie su sesi\u00f3n
 manage.index.login=Iniciar sesi\u00f3n
@@ -1127,10 +1127,10 @@ manage.index.des02=Debe iniciar sesi\u00f3n para gestionar metadatos
 manage.index.title03=Sobre las cuentas de acceso
 manage.index.title04=\u00bfQu\u00e9 necesito para editar mis metadatos?
 manage.index.des03=Usted necesitar\u00e1
-manage.index.li01=inicio de sesi\u00f3n est\u00e1ndar de ALA
+manage.index.li01=inicio de sesi\u00f3n est\u00e1ndar del SNDB
 manage.index.li02=el rol de 'Editor de colecciones'
 manage.index.li03=para ser listado como un contacto con permisos de editor para la colecci\u00f3n, la instituci\u00f3n o el dataset que desea editar
-manage.index.title05=No tengo una cuenta de ALA
+manage.index.title05=No tengo una cuenta de SNDB
 manage.index.des04=Usted puede registrarse
 manage.index.des05=aqu\u00ed
 manage.index.des06=Si usted ya aparece como contacto de la entidad que quiere editar, aseg\u00farese que usa la misma direcci\u00f3n de correo de contacto
@@ -1185,7 +1185,7 @@ providerMap.providerGroup.label=Grupo proveedor
 
 
 #The following messages are for the Web Service page. They are not urgent to translate
-data.catalogue.title=Servicios Web | Colecciones de historia natural | Atlas of Living Australia
+data.catalogue.title=Servicios Web | Colecciones de historia natural | Portal de Datos del SNDB
 data.catalogue.home=Inicio
 data.catalogue.collections=Colecciones
 data.catalogue.webservices=Servicios web
@@ -1195,7 +1195,7 @@ data.catalogue.des02=wiki
 data.catalogue.des03=y, en particular en la documentaci\u00f3n de
 data.catalogue.des04=Servicios de collectory
 data.catalogue.title02=Servicios de datos
-data.catalogue.des05=El registro de Atlas of Living Australia contiene metadatos que describen
+data.catalogue.des05=El registro de Portal de Datos del SNDB contiene metadatos que describen
 data.catalogue.ws0024.collections=Colecciones
 data.catalogue.ws0024.institutions=instituciones
 data.catalogue.ws0024.dps=ProveedoresDeDatos
@@ -1567,15 +1567,15 @@ map.js.allarecurrentlyvisible=Todas son actualmente visibles en el mapa.
 map.js.collectionarecurrentlyvisible=Hay colecciones actualmente visibles en el mapa.
 map.js.contentline01=Solicitud para comprobar las p\u00e1ginas web que presenta informaci\u00f3n sobre la
 map.js.contentline02=Estimado/a
-map.js.contentline03=La direcci\u00f3n web de Atlas of Living Australia es\:
+map.js.contentline03=La direcci\u00f3n web de Portal de Datos del SNDB es\:
 map.js.contentline04=Sin embargo, puede encontrar\:
 map.js.contentline05=Su p\u00e1gina de la colecci\u00f3n en\:
 map.js.contentline06=La p\u00e1gina de su instituci\u00f3n en\:
 map.js.contentline07=O explora las colecciones de la comunidad en\:
 map.js.contentline08=Despu\u00e9s de consultar la p\u00e1gina web, por favor responda a este correo electr\u00f3nico con cualquier comentario y modificaci\u00f3n que quiera hacer a las p\u00e1ginas de sus colecciones e instituci\u00f3n antes del lunes, 25 de octubre de 2010.
 map.js.contentline09=Atentamente,
-map.js.contentline10=El Atlas of Living Australia
-map.js.contentline11=Gesti\u00f3n de Datos| Atlas of Living Australia
+map.js.contentline10=El Portal de Datos del SNDB
+map.js.contentline11=Gesti\u00f3n de Datos| Portal De Datos del SNDB
 map.js.contentline12=CSIRO
 map.js.norecord=No hay registros
 map.js.record=registro
@@ -1697,10 +1697,10 @@ datasets.js.displaytext09=CC 2.5
 datasets.js.displaytext10=Datos disponibles
 datasets.js.displaytext11=Enlaces disponibles
 datasets.js.displaytext12=En curso
-datasets.js.helptext01=Comparte registros en el Portal de Datos de GBIF.ES
+datasets.js.helptext01=Comparte registros en el Portal de Datos del SNDB
 datasets.js.helptext02=Describe un recurso Web
 datasets.js.helptext03=Contribuye el contenido de un documento
-datasets.js.helptext04=Los datos se han subido directamente al Portal de Datos de GBIF.ES
+datasets.js.helptext04=Los datos se han subido directamente al Portal de Datos del SNDB
 datasets.js.helptext05=Creative Commons Reconocimiento (Attribution)
 datasets.js.helptext06=Creative Commons Reconocimiento-NoComercial
 datasets.js.helptext07=Creative Commons Reconocimiento-CompartirIgual
@@ -1710,16 +1710,16 @@ datasets.js.helptext10=No hay informaci\u00f3n disponible sobre la licencia
 datasets.js.helptext11=No existe informaci\u00f3n
 datasets.js.helptext12=Creative Commons versi\u00f3n 3.0
 datasets.js.helptext13=Creative Commons versi\u00f3n 2.5
-datasets.js.helptext14=Los datos est\u00e1n accesibles a trav\u00e9s del Portal de Datos de GBIF.ES
+datasets.js.helptext14=Los datos est\u00e1n accesibles a trav\u00e9s del Portal de Datos del SNDB
 datasets.js.helptext15=Proporciona v\u00ednculos a contenido en otros sitios web
-datasets.js.helptext16=En proceso de negociaci\u00f3n para la integraci\u00f3n en el Portal de Datos de GBIF.ES
-datasets.js.helptext17=El recurso se ha negado a contribuir al Portal de Datos de GBIF.ES
-datasets.js.helptext18=Ha sido identificado pero todav\u00eda no ha sido aprobado para contribuci\u00f3n al Atlas
+datasets.js.helptext16=En proceso de negociaci\u00f3n para la integraci\u00f3n en el Portal de Datos del SNDB
+datasets.js.helptext17=El recurso se ha negado a contribuir al Portal de Datos del SNDB
+datasets.js.helptext18=Ha sido identificado pero todav\u00eda no ha sido aprobado para contribuci\u00f3n al Portal
 datasets.js.facets01=Tipo de recurso
 datasets.js.facets02=Tipo de licencia
 datasets.js.facets03=Versi\u00f3n de la licencia
 datasets.js.facets04=Estado de integraci\u00f3n
-datasets.js.facets05=Avance de la integraci\u00f3n de los datos en el Portal de Datos de GBIF.ES
+datasets.js.facets05=Avance de la integraci\u00f3n de los datos en el Portal de Datos del SNDB
 datasets.js.facets06=Tipo de contenido
 datasets.js.facets07=Los tipos de informaci\u00f3n disponible en el conjunto de datos. Un conjunto puede tener muchos tipos de contenido.
 datasets.js.facets08=Contiene
