se cambio el label de la home por plantas, algas y hongos

--- a/grails-app/i18n/messages_es.properties
+++ b/grails-app/i18n/messages_es.properties
@@ -73,7 +73,7 @@ public.map3.link.insect=Artr&oacute;podos
 public.map3.link.insects=Insectos, ara\u00f1as, \u00e1caros y otros artr\u00f3podos
 public.map3.link.mos=Microorganismos
 public.map3.link.protists=Protistas, bacterias, virus, microhongos y microalgas
-public.map3.link.plants=Plantas
+public.map3.link.plants=Plantas, algas y hongos
 public.map3.link.vascular=Plantas vasculares, algas, hongos, l\u00edquenes y bri\u00f3fitos
 public.map3.adminlink=Administrador
 public.map3.maplistcol.map=Mapa
